# hanabi

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: auto-release.yml
config/: README.md  example.yaml  production.yaml  staging.yaml
hanabi-lint/: Cargo.toml
hanabi-lint/src/: backlog.rs  cargo_checks.rs  complexity.rs  config_detector.rs  coverage.rs  error.rs  hygiene_detector.rs  lib.rs  main.rs  modularity.rs  refactoring_detector.rs  report.rs  unwrap_detector.rs
load-tests/: README.md  graphql-load-test.js  smoke-test.js
module/: default.nix  nixos.nix
nix/: web-services.nix
src/: bff.rs  builder.rs  degraded.rs  error.rs  handlers.rs  health.rs  health_aggregator.rs  images.rs  lib.rs  main.rs  metrics.rs  middleware.rs  preflight.rs  prometheus.rs  redis.rs  request_context.rs  resources.rs  router.rs  server.rs  state.rs  traits.rs
src/auth/: compiled.rs  interceptor.rs  middleware.rs  mod.rs  oauth.rs  query_rewriter.rs  redis_pool.rs  session.rs  session_events.rs  social_oauth.rs  traits.rs
src/config/: api.rs  cache.rs  compression.rs  features.rs  geolocation.rs  health.rs  logging.rs  metrics.rs  mod.rs  network.rs  paths.rs  preflight.rs  s3.rs  security.rs  server.rs  telemetry.rs
src/config/bff/: cache.rs  federation.rs  http.rs  mod.rs  oauth.rs  optimization.rs  session.rs  webhooks.rs  websocket.rs
src/federation/: apq.rs  batch.rs  cache.rs  cache_invalidation.rs  cost.rs  deduplication.rs  entity_cache.rs  executor.rs  hive_planner.rs  load_shedding.rs  mod.rs  plan_executor.rs  plugins.rs  query_planner.rs  redis_cache.rs  security.rs  supergraph.rs  tracing_ext.rs  types.rs  watcher.rs
src/federation/subscriptions/: broadcaster.rs  manager.rs  mod.rs  pool.rs  router.rs  sse.rs
src/l4/: mod.rs
src/memory/: coordinator.rs  mod.rs
src/mesh/: mod.rs
src/providers/: geolocation.rs  google_oauth.rs  image_proxy.rs  instagram_oauth.rs  meta_webhooks.rs  mod.rs  stripe_webhooks.rs
src/proxy/: cache.rs  discovery.rs  mod.rs
src/rate_limiting/: bff.rs  config.rs  dynamic.rs  error.rs  exemption.rs  federation.rs  ip.rs  mod.rs  sync.rs
src/telemetry/: mod.rs  otel.rs
src/webhooks/: meta.rs  mod.rs  stripe.rs
tests/: entity_resolution_test.rs  federation_edge_cases_test.rs  query_planning_test.rs  schema_validation_test.rs  subscription_routing_test.rs
