[package]
name = "hanabi-bff"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Pleme Team <team@pleme.io>"]
repository = "https://github.com/pleme-io/hanabi"
homepage = "https://github.com/pleme-io/hanabi"
readme = "README.md"
description = "Hanabi (花火) - GraphQL Federation BFF platform service"
keywords = ["graphql", "federation", "bff", "gateway", "axum"]
categories = ["web-programming::http-server", "network-programming"]
exclude = ["module/", "target/", "result-*", "Cargo.nix", "flake.*", "hanabi-lint/", "load-test-results.json"]

[lib]
name = "hanabi"
path = "src/lib.rs"

[[bin]]
name = "hanabi"
path = "src/main.rs"

[dependencies]
# Axum web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.4", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-br", "decompression-gzip", "decompression-br", "trace", "cors", "set-header", "timeout", "limit"] }

# HTTP client for BFF proxy (rustls with ring crypto - auto-installs provider)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# S3 client for image proxy + webapp source (authenticated access to RustFS/MinIO)
# No TLS needed - RustFS is internal HTTP endpoint (http://rustfs-svc...)
rust-s3 = { version = "0.37", default-features = false, features = ["with-tokio", "fail-on-err"] }

# Archive extraction for S3 webapp source (download tar.gz at startup)
flate2 = "1.0"
tar = "0.4"

# Redis for BFF session storage
# Uses ConnectionManager for multiplexed async connections with auto-reconnect
# (Architectural Decision: ConnectionManager over deadpool - see rust-service-standards skill)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# NATS for cross-service event subscription (session invalidation from backend)
async-nats = "0.38"

# Startup notifications (Discord, Grafana, health probes)
pleme-notifications = "0.1"

# UUID for session IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# WebSocket client for BFF WebSocket proxy
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
base64 = "0.22"
rand = "0.8"

# OAuth utilities (PKCE, URL encoding)
sha2 = "0.10"
urlencoding = "2.1"

# Token encryption for social integrations (AES-256-GCM)
aes-gcm = "0.10"

# HMAC signature verification for webhooks (Stripe, Meta)
hmac = "0.12"
hex = "0.4"

# Rate limiting for BFF
tower_governor = "0.4"
governor = "0.6"

# JWT decoding for role-based rate limit exemption
jsonwebtoken = "9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async traits for dependency inversion
async-trait = "0.1"

# Concurrent data structures for connection pooling
dashmap = "6.0"

# High-performance concurrent cache for response caching
moka = { version = "0.12", features = ["future"] }

# GraphQL parsing for federation query planning
# Spec-compliant parser from Apollo GraphQL - preserves arguments, fragments, directives
apollo-parser = "0.8"

# Production-grade GraphQL Federation query planner (from Hive Router)
# MIT licensed, 189 compliance tests, handles all federation edge cases
hive-router-query-planner = "2.1"


# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus metrics (for /metrics endpoint alongside StatsD)
prometheus = { version = "0.13", features = ["process"] }

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# System info and utilities
sys-info = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
time = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
lazy_static = "1.4"
regex = "1.10"
mime_guess = "2.0"
num_cpus = "1.16"
socket2 = "0.5"

# Performance optimizations
crossbeam-utils = "0.8"  # CachePadded for false sharing prevention
ahash = "0.8"            # Faster non-cryptographic hashing
once_cell = "1.19"       # Lazy initialization (const-friendly)
smallvec = "1.13"        # Stack-allocated vectors for small arrays
pin-project-lite = "0.2" # Zero-cost pin projection for async streams

# HTTP types
http = "1.0"
hyper = "1.0"

# jemalloc allocator for 5x faster multi-threaded allocation
# Optional: enabled via feature flag, configured in Nix build
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["google-oauth", "instagram-oauth", "stripe-webhooks", "meta-webhooks", "geolocation", "image-proxy"]
# Enable jemalloc global allocator - configured in Nix build environment
jemalloc = ["tikv-jemallocator"]
# Enable OpenTelemetry distributed tracing - exports traces to OTLP endpoint
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
# Built-in provider features — products can disable what they don't need
google-oauth = []
instagram-oauth = []
stripe-webhooks = []
meta-webhooks = []
geolocation = []
image-proxy = []

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# Mock HTTP server for subgraph simulation
wiremock = "0.6"

# Assertions
assert_matches = "1.5"

# Property-based testing for edge case discovery
proptest = "1.4"

# Temp files for testing
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
